--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -3,16 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 html {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
 a {
   text-decoration: none;
   color: whitesmoke;
 }
-
 .navbar {
   border: 1px solid black;
   background-color: gray;
@@ -22,17 +19,71 @@ a {
   align-items: center;
   justify-content: end;
 }
-
-.navbar__logo {
-  display: flex;
-  align-items: center;
-  margin: auto;
-}
-
 .navbar img {
   height: 70px;
 }
-
-.navbar__logout {
+.navbar__logo {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  margin-left: 20px;
+}
+.navbar__login {
+  margin-right: 20px;
+}
+.registration,
+.loginform {
+  border: 1px solid gray;
+  border-radius: 4px;
+  max-width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  margin-top: 45px;
+  padding: 20px 100px;
+}
+.registration input,
+.loginform input {
+  height: 30px;
+  width: 300px;
+  border-radius: 3px;
+}
+.registration__body,
+.loginform__body {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+.registration__footer,
+.loginform__footer {
+  display: flex;
+  margin-top: 8px;
+  font-size: 12px;
+}
+.registration__footer__text,
+.loginform__footer__text {
   margin-right: 10px;
+}
+.registration__btn,
+.loginform__btn {
+  height: 30px;
+  background-color: #a9b68e;
+  border-radius: 5px;
+  color: white;
+}
+.registration__btn:hover,
+.loginform__btn:hover {
+  border: 3px solid #678585;
+  color: white;
+  background-color: gray;
+}
+.registration a,
+.loginform a {
+  color: #808080;
+}
+.my__input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
