--- a/client/src/styles/App.less
+++ b/client/src/styles/App.less
@@ -26,7 +26,7 @@ a {
   border-radius: 2px;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 
   img {
     height: 70px;
@@ -41,14 +41,16 @@ a {
 
   &__btn {
     margin-right: 20px;
-    border: 2px solid white;
+    border: 2px solid gray;
     border-radius: 6px;
     transition: @transition;
+    background-color: silver;
 
     a {
       display: block;
       height: 100%;
       padding: 5px 20px;
+      color: gray;
     }
 
     &:hover {
@@ -73,9 +75,11 @@ a {
   margin: auto;
   margin-top: 45px;
   padding: 20px 100px;
-  background-color:silver;
+  background-color: silver;
 
-
+ &__header {
+   font-size: 20px;
+ }
 
   &__body {
     display: flex;
@@ -83,26 +87,31 @@ a {
     align-items: stretch;
     margin-top: 10px;
 
-    &__field input {
-      display: flex;
-      flex-direction: column;
-      align-items:flex-start;
-      height: 30px;
-      width: 300px;
-      border-radius: 3px;
-      text-align: center;
-      border: 1px solid black;
+    &__field {
+      margin-bottom: 10px;
 
-      &:focus {
-        border: 3px solid blue;
+      input {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        height: 30px;
+        min-width: 300px;
+        border-radius: 5px;
+        text-align: center;
+        border: 1px solid gray;
+
+        &:focus {
+          border: 2px solid gray;
+          outline: none;
+        }
       }
-
     }
 
     &__checkbox {
       display: flex;
-      align-items:center;
-      justify-content:space-evenly;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-top: 30px;
     }
   }
 
@@ -118,10 +127,10 @@ a {
 
   &__btn {
     height: 30px;
-    background-color:grey;
+    background-color: grey;
     border-radius: 5px;
     color: white;
-    margin-top: 30px;
+    margin-top: 20px;
     border: none;
     transition: @transition;
     font-weight: 600;
@@ -129,7 +138,7 @@ a {
 
     &[disabled] {
       background-color: silver;
-      color:gray;
+      color: gray;
     }
 
     &:hover:not([disabled]) {
