--- a/client/src/styles/App.less
+++ b/client/src/styles/App.less
@@ -20,7 +20,7 @@ a {
 }
 
 .navbar {
-  border: 1px solid black;
+  //border: 1px solid black;
   background-color: gray;
   height: 70px;
   border-radius: 2px;
@@ -77,9 +77,9 @@ a {
   padding: 20px 100px;
   background-color: silver;
 
- &__header {
-   font-size: 20px;
- }
+  &__header {
+    font-size: 20px;
+  }
 
   &__body {
     display: flex;
@@ -191,6 +191,9 @@ a {
   display: flex;
   //border: 1px solid black;
   margin-top: 5px;
+  justify-content: center;
+  min-width: 5rem;
+
 }
 
 .content {
@@ -198,16 +201,21 @@ a {
   background-color: silver;
   // border-right: 1px solid black;
   // border-top: 1px solid black;
-  width: 100%;
-  height: 500px;
+  // border: 2px solid black;
+  height: min-content;
+  width: 800px;
+  padding-right: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .user {
 
   &__header {
-  width: 100%;
-  border: 1px solid red;
-  display: flex;
+    width: 100%;
+    border: 1px solid red;
+    display: flex;
   }
 
   &__description {
@@ -232,6 +240,92 @@ a {
 
   &__wall {
     border: 1px solid yellow;
+    padding: 10px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: stretch;
   }
 }
 
+.post {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid blue;
+  background-color: white;
+  border-radius: 4px;
+  width: 700px;
+
+  &__remove {
+    color: blue;
+
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    height: min-content;
+    align-items: center;
+    background-color: white;
+
+    // border: 3px solid black;
+    // padding: 10px;
+
+    &__field {
+      padding: 20px;
+      width: 700px;
+      border: none;
+      background-color: white;
+      font-size: 12px;
+      border: 1px solid red;
+
+      &:focus {
+        // border: 3px solid red;
+        outline: none;
+      }
+    }
+
+    &__btn {
+      width: 200px;
+      height: 40px;
+      margin-right: 20px;
+      border: 2px solid gray;
+      border-radius: 6px;
+      transition: @transition;
+      background-color: silver;
+
+
+      &:hover {
+        background-color: white;
+        transition: @transition;
+      }
+    }
+  }
+
+  &__header {
+    margin-bottom: 5px;
+    margin: 0 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    margin-bottom: 5px;
+    font-size: 15px;
+  }
+
+  &__footer {
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__date {
+    font-size: 10px;
+  }
+}
