--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,55 +1,49 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
 html {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif; }
+
 body {
-  background-image: url(background.jpg);
-}
+  background-image: url(./background.jpg); }
+
 a {
   text-decoration: none;
-  color: whitesmoke;
-}
+  color: whitesmoke; }
+
 .navbar {
   background-color: gray;
   height: 70px;
   border-radius: 2px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-}
-.navbar img {
-  height: 70px;
-}
-.navbar__logo {
-  display: flex;
-  align-items: center;
-  margin-right: auto;
-  margin-left: 20px;
-}
-.navbar__btn {
-  margin-right: 20px;
-  border: 2px solid gray;
-  border-radius: 6px;
-  transition: 200ms;
-  background-color: silver;
-}
-.navbar__btn a {
-  display: block;
-  height: 100%;
-  padding: 5px 20px;
-  color: gray;
-}
-.navbar__btn:hover {
-  background-color: white;
-  transition: 200ms;
-}
-.navbar__btn:hover a {
-  color: gray;
-}
+  justify-content: flex-end; }
+  .navbar img {
+    height: 70px; }
+  .navbar__logo {
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+    margin-left: 20px; }
+  .navbar__btn {
+    margin-right: 20px;
+    border: 2px solid gray;
+    border-radius: 6px;
+    transition: 200ms;
+    background-color: silver; }
+    .navbar__btn a {
+      display: block;
+      height: 100%;
+      padding: 5px 20px;
+      color: gray; }
+    .navbar__btn:hover {
+      background-color: white;
+      transition: 200ms; }
+      .navbar__btn:hover a {
+        color: gray; }
+
 .registration,
 .loginform {
   border: 1px solid gray;
@@ -61,116 +55,101 @@ a {
   margin: auto;
   margin-top: 45px;
   padding: 20px 100px;
-  background-color: silver;
-}
-.registration__header,
-.loginform__header {
-  font-size: 20px;
-}
-.registration__body,
-.loginform__body {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  margin-top: 10px;
-}
-.registration__body__field,
-.loginform__body__field {
-  margin-bottom: 10px;
-}
-.registration__body__field input,
-.loginform__body__field input {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  height: 30px;
-  min-width: 300px;
-  border-radius: 5px;
-  text-align: center;
-  border: 1px solid gray;
-}
-.registration__body__field input:focus,
-.loginform__body__field input:focus {
-  border: 2px solid gray;
-  outline: none;
-}
-.registration__body__checkbox,
-.loginform__body__checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-top: 30px;
-}
-.registration__footer,
-.loginform__footer {
-  display: flex;
-  margin-top: 8px;
-  font-size: 12px;
-}
-.registration__footer__text,
-.loginform__footer__text {
-  margin-right: 3px;
-}
-.registration__btn,
-.loginform__btn {
-  height: 30px;
-  background-color: grey;
-  border-radius: 5px;
-  color: white;
-  margin-top: 20px;
-  border: none;
-  transition: 200ms;
-  font-weight: 600;
-  border: 2px solid gray;
-}
-.registration__btn[disabled],
-.loginform__btn[disabled] {
-  background-color: silver;
-  color: gray;
-}
-.registration__btn:hover:not([disabled]),
-.loginform__btn:hover:not([disabled]) {
-  border: none;
-  color: white;
-  background-color: white;
-  transition: 200ms;
-  cursor: pointer;
-  color: gray;
-  border: 2px solid gray;
-}
-.registration a,
-.loginform a {
-  color: #808080;
-}
+  background-color: silver; }
+  .registration__header,
+  .loginform__header {
+    font-size: 20px; }
+  .registration__body,
+  .loginform__body {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin-top: 10px; }
+    .registration__body__field,
+    .loginform__body__field {
+      margin-bottom: 10px; }
+      .registration__body__field input,
+      .loginform__body__field input {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        height: 30px;
+        min-width: 300px;
+        border-radius: 5px;
+        text-align: center;
+        border: 1px solid gray; }
+        .registration__body__field input:focus,
+        .loginform__body__field input:focus {
+          border: 2px solid gray;
+          outline: none; }
+    .registration__body__checkbox,
+    .loginform__body__checkbox {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-top: 30px; }
+  .registration__footer,
+  .loginform__footer {
+    display: flex;
+    margin-top: 8px;
+    font-size: 12px; }
+    .registration__footer__text,
+    .loginform__footer__text {
+      margin-right: 3px; }
+  .registration__btn,
+  .loginform__btn {
+    height: 30px;
+    background-color: grey;
+    border-radius: 5px;
+    color: white;
+    margin-top: 20px;
+    border: none;
+    transition: 200ms;
+    font-weight: 600;
+    border: 2px solid gray; }
+    .registration__btn[disabled],
+    .loginform__btn[disabled] {
+      background-color: silver;
+      color: gray; }
+    .registration__btn:hover:not([disabled]),
+    .loginform__btn:hover:not([disabled]) {
+      border: none;
+      color: white;
+      background-color: white;
+      transition: 200ms;
+      cursor: pointer;
+      color: gray;
+      border: 2px solid gray; }
+  .registration a,
+  .loginform a {
+    color: grey; }
+
 .aside {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-}
-.aside__link {
-  padding: 7px 30px;
-  border: 1px solid gray;
-  width: 100%;
-  color: gray;
-  background-color: silver;
-  border-top-left-radius: 7px;
-  border-bottom-left-radius: 7px;
-  margin-bottom: 5px;
-  transition: 200ms;
-}
-.aside__link.active {
-  border-right: none;
-}
-.aside__link:hover {
-  background-color: white;
-  transition: 200ms;
-}
+  align-items: flex-start; }
+  .aside__link {
+    padding: 7px 30px;
+    border: 1px solid gray;
+    width: 100%;
+    color: gray;
+    background-color: silver;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    margin-bottom: 5px;
+    transition: 200ms; }
+    .aside__link.active {
+      border-right: none; }
+    .aside__link:hover {
+      background-color: white;
+      transition: 200ms; }
+
 .container {
   display: flex;
   margin-top: 5px;
   justify-content: center;
-  min-width: 5rem;
-}
+  min-width: 5rem; }
+
 .content {
   padding-left: 15px;
   background-color: silver;
@@ -179,99 +158,84 @@ a {
   padding-right: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
+
 .user__header {
   width: 100%;
   border: 1px solid red;
-  display: flex;
-}
+  display: flex; }
 .user__description {
   display: flex;
   flex-direction: column;
-  width: 100%;
-}
+  width: 100%; }
 .user__name {
-  border: 1px solid green;
-}
+  border: 1px solid green; }
 .user__biography {
   border: 1px solid blue;
-  height: 100%;
-}
+  height: 100%; }
 .user__photo {
   width: 100px;
-  height: 100px;
-}
+  height: 100px; }
 .user__wall {
   border: 1px solid yellow;
   padding: 10px;
   display: flex;
   flex-direction: column-reverse;
-  align-items: stretch;
-}
+  align-items: stretch; }
+
 .post {
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid blue;
   background-color: white;
   border-radius: 4px;
-  width: 700px;
-}
-.post__remove {
-  color: blue;
-}
-.post__remove:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-.post__form {
-  display: flex;
-  flex-direction: column;
-  height: min-content;
-  align-items: center;
-  background-color: white;
-}
-.post__form__field {
-  padding: 20px;
-  width: 700px;
-  border: none;
-  background-color: white;
-  font-size: 12px;
-  border: 1px solid red;
-}
-.post__form__field:focus {
-  outline: none;
-}
-.post__form__btn {
-  width: 200px;
-  height: 40px;
-  margin-right: 20px;
-  border: 2px solid gray;
-  border-radius: 6px;
-  transition: 200ms;
-  background-color: silver;
-}
-.post__form__btn:hover {
-  background-color: white;
-  transition: 200ms;
-}
-.post__header {
-  margin-bottom: 5px;
-  margin: 0 30px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.post__content {
-  margin-bottom: 5px;
-  font-size: 15px;
-}
-.post__footer {
-  font-size: 10px;
-  display: flex;
-  justify-content: center;
-}
-.post__date {
-  font-size: 10px;
-}
+  width: 700px; }
+  .post__remove {
+    color: blue; }
+    .post__remove:hover {
+      text-decoration: underline;
+      cursor: pointer; }
+  .post__form {
+    display: flex;
+    flex-direction: column;
+    height: min-content;
+    align-items: center;
+    background-color: white; }
+    .post__form__field {
+      padding: 20px;
+      width: 700px;
+      border: none;
+      background-color: white;
+      font-size: 12px;
+      border: 1px solid red; }
+      .post__form__field:focus {
+        outline: none; }
+    .post__form__btn {
+      width: 200px;
+      height: 40px;
+      margin-right: 20px;
+      border: 2px solid gray;
+      border-radius: 6px;
+      transition: 200ms;
+      background-color: silver; }
+      .post__form__btn:hover {
+        background-color: white;
+        transition: 200ms; }
+  .post__header {
+    margin-bottom: 5px;
+    margin: 0 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; }
+  .post__content {
+    margin-bottom: 5px;
+    font-size: 15px; }
+  .post__footer {
+    font-size: 10px;
+    display: flex;
+    justify-content: center; }
+  .post__date {
+    font-size: 10px; }
+
+/*# sourceMappingURL=App.css.map */
