--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -7,7 +7,9 @@ html {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif; }
 
 body {
-  background-image: url(./background.jpg); }
+  background-image: url(./background.jpg);
+  background-size: cover;
+  background-attachment: fixed; }
 
 a {
   text-decoration: none;
