--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -10,11 +10,11 @@ html {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
-body {
-  background-image: url(./background.jpg);
-  background-size: cover;
-  background-attachment: fixed;
-}
+// body {
+//   background-image: url(./background.jpg);
+//   background-size: cover;
+//   background-attachment: fixed;
+// }
 
 a {
   text-decoration: none;
