--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -3,12 +3,8 @@
   padding: 0;
   box-sizing: border-box; }
 
-html {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif; }
-
 a {
-  text-decoration: none;
-  color: whitesmoke; }
+  text-decoration: none; }
 
 .navbar {
   background-color: gray;
@@ -126,20 +122,24 @@ a {
   flex-direction: column;
   align-items: flex-start; }
   .aside__link {
-    padding: 7px 30px;
-    border: 1px solid gray;
+    padding: 7px 0 7px 30px;
     width: 100%;
     color: gray;
-    background-color: silver;
-    border-top-left-radius: 7px;
-    border-bottom-left-radius: 7px;
+    background-color: white;
     margin-bottom: 5px;
-    transition: 200ms; }
+    transition: 200ms;
+    display: 'flex';
+    align-items: 'center'; }
     .aside__link.active {
-      border-right: none; }
+      border-right: none;
+      background-color: #363C42;
+      transition: 200ms;
+      color: white;
+      transform: scale(1.03); }
     .aside__link:hover {
-      background-color: white;
-      transition: 200ms; }
+      background-color: #363C42;
+      color: white;
+      transform: scale(1.03); }
 
 .container {
   display: flex;
