--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,7 +1,31 @@
+.react-tabs__tab-list {
+  border-bottom: 2px solid #363C42;
+  margin: 0 0 10px;
+  padding: 0; }
+.react-tabs__tab {
+  display: inline-block;
+  border: 2px solid #363C42;
+  border-radius: 5px 5px 0 0;
+  border-bottom: none;
+  bottom: -2px;
+  position: relative;
+  list-style: none;
+  padding: 7px 18px;
+  cursor: pointer;
+  margin-left: 10px;
+  transition: 200ms; }
+  .react-tabs__tab--selected {
+    background: #F1F2F4;
+    border-color: #363C42;
+    color: black; }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
+
+html {
+  font-family: "Roboto", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif; }
 
 a {
   text-decoration: none; }
@@ -126,6 +150,7 @@ a {
     width: 100%;
     color: gray;
     background-color: white;
+    border-radius: 5px;
     margin-bottom: 5px;
     transition: 200ms;
     display: 'flex';
