fix messages bug, add autoscroll

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -185,6 +185,11 @@ a {
   }
 }
 
+// .messageBox {
+//   overflow-y: auto;
+//   background-color: white;
+// }
+
 .aside {
   display: flex;
   flex-direction: column;
